--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run db\" \"npm run dev\"",
+    "dev": "react-scripts start",
+    "db": "json-server --watch ./db/db.json --port=5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
+    "json-server": "^0.17.1"
   }
 }
