--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run db\" \"npm run dev\"",
-    "dev": "react-scripts start",
-    "db": "json-server --watch ./db/db.json --port=5000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,9 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.6.0",
-    "json-server": "^0.17.1"
   }
 }
